# valley-wildfire-viz

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .tool-versions  CONTRIBUTING.md  README.md  download.py  extract.py  main.py  preview.webm  pyproject.toml  pyrightconfig.json  pytest.ini  video.py
.github/workflows/: build.yml
data/: .gitignore
src/: __init__.py  color_scales.py  data.py  fire.py  flame.py  images.py  temporal.py  vegetation.py  vtk_side_effects.py  vtk_widget.py  wind.py  window.py
tests/: test_sample.py
