[tool.poetry]
name = "valley-wildfire-viz"
version = "0.1.0"
description = "CS530 Introduction to Scientific Visualization final project @Purdue."
authors = ["Po-Jen Hsu <hsu248@purdue.edu>", "Shuang Wu <seanwu1105@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
vtk = "^9.2.6"
pyside6 = "^6.5.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pylint = "^2.17.2"
pre-commit = "^3.2.2"
pytest = "^7.3.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
